First public commit

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <meta content="utf-8" http-equiv="encoding"> -->
   <meta charset="UTF-8">
   <meta name="description" content="Play around with the concept of Field from physics">
-  <meta name="keywords" content="d3, d3.js, visualization, Magnetic Field, Physics">
+  <meta name="keywords" content="d3, d3.js, visualization, Vectorial Field, Physics">
   <meta name="author" content="Jesús Martínez-Blanco">
 
   <title>Fields</title>
