--- a/Index.html
+++ b/Index.html
@@ -286,7 +286,7 @@
 	</script>
 
 	<!-- Google Analytics -->
-	<script>
+	<!--<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -294,6 +294,18 @@
 
 	  ga('create', 'UA-64906297-4', 'auto');
 	  ga('send', 'pageview');
+	</script>-->
+
+	<!-- Google Analytics: GitHub version -->
+	<script type = "text/javascript" >
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"
+	</script>
+	<script type = "text/javascript" >
+		try {
+			var pageTracker = _gat._getTracker("UA-64906297-4");
+			pageTracker._trackPageview();
+		} catch (err) {} 
 	</script>
 
 </body>
